[gd_scene load_steps=21 format=2]

[ext_resource path="res://menu/Background2D/2DBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/font/ethnocentric rg.tres" type="DynamicFontData" id=2]
[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/wallet/wallet_balance.png" type="Texture" id=4]
[ext_resource path="res://theme/lineedit_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/font/rajdhani.tres" type="DynamicFont" id=6]
[ext_resource path="res://theme/blue_button.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/blue_button_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/ui/wallet/6-050-hover.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/wallet/6-075.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/wallet/6-1-hover.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/wallet/6-050.png" type="Texture" id=12]
[ext_resource path="res://wallet/WalletSend.gd" type="Script" id=13]
[ext_resource path="res://status_bar/StatusBar.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/ui/wallet/6-025.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/wallet/6-025-hover.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/wallet/6-075-hover.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/wallet/6-1.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="WalletSend" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 800, 800 )
mouse_filter = 2
script = ExtResource( 13 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -540.0
margin_right = 500.0
margin_bottom = 540.0
rect_min_size = Vector2( 800, 800 )
mouse_filter = 2
custom_constants/separation = 40
alignment = 1

[node name="Heading" type="Label" parent="VBox"]
margin_top = 47.0
margin_right = 1000.0
margin_bottom = 222.0
rect_min_size = Vector2( 500, 175 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Coin transfer"
align = 1
valign = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
visible = false
margin_top = 215.0
margin_right = 1000.0
margin_bottom = 415.0
rect_min_size = Vector2( 0, 200 )
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBox/HBox"]
margin_left = 160.0
margin_right = 560.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 175 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="BalanceLabel" type="Label" parent="VBox/HBox"]
margin_left = 564.0
margin_top = 67.0
margin_right = 839.0
margin_bottom = 133.0
rect_min_size = Vector2( 275, 66 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "--,---"
valign = 2
autowrap = true

[node name="CC1" type="CenterContainer" parent="VBox"]
margin_top = 262.0
margin_right = 1000.0
margin_bottom = 412.0
rect_min_size = Vector2( 700, 150 )

[node name="VBox" type="VBoxContainer" parent="VBox/CC1"]
margin_left = 150.0
margin_top = 22.0
margin_right = 850.0
margin_bottom = 128.0
rect_min_size = Vector2( 700, 0 )

[node name="Label" type="Label" parent="VBox/CC1/VBox"]
margin_right = 700.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Receiver address"
align = 1

[node name="ReceiverField" type="LineEdit" parent="VBox/CC1/VBox"]
margin_top = 49.0
margin_right = 700.0
margin_bottom = 106.0
rect_min_size = Vector2( 600, 50 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
align = 1

[node name="CC2" type="CenterContainer" parent="VBox"]
margin_top = 452.0
margin_right = 1000.0
margin_bottom = 602.0
rect_min_size = Vector2( 0, 150 )

[node name="VBox" type="VBoxContainer" parent="VBox/CC2"]
margin_left = 150.0
margin_top = 22.0
margin_right = 850.0
margin_bottom = 128.0
rect_min_size = Vector2( 700, 0 )

[node name="Label" type="Label" parent="VBox/CC2/VBox"]
margin_right = 700.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Transfer amount"
align = 1

[node name="AmountField" type="LineEdit" parent="VBox/CC2/VBox"]
margin_top = 49.0
margin_right = 700.0
margin_bottom = 106.0
rect_min_size = Vector2( 600, 50 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
align = 1
max_length = 15
placeholder_text = "Enter amount in SAT"

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 642.0
margin_right = 1000.0
margin_bottom = 842.0
rect_min_size = Vector2( 0, 150 )
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="QuarterButton" type="TextureButton" parent="VBox/HBox2"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="HalfButton" type="TextureButton" parent="VBox/HBox2"]
margin_left = 300.0
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="ThreeQtrButton" type="TextureButton" parent="VBox/HBox2"]
margin_left = 500.0
margin_right = 700.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 5

[node name="FullButton" type="TextureButton" parent="VBox/HBox2"]
margin_left = 700.0
margin_right = 900.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 18 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Spacer" type="CenterContainer" parent="VBox"]
visible = false
margin_top = 842.0
margin_right = 1000.0
margin_bottom = 892.0
rect_min_size = Vector2( 0, 50 )

[node name="HBox3" type="HBoxContainer" parent="VBox"]
margin_top = 882.0
margin_right = 1000.0
margin_bottom = 1032.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
custom_constants/separation = 125
alignment = 1

[node name="ConfirmButton" type="Button" parent="VBox/HBox3"]
margin_left = 37.0
margin_right = 437.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "Confirm"

[node name="CancelButton" type="Button" parent="VBox/HBox3"]
margin_left = 562.0
margin_right = 962.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "Back"

[node name="StatusBar" parent="." instance=ExtResource( 14 )]

[connection signal="pressed" from="VBox/HBox2/QuarterButton" to="." method="fill_amount" binds= [ 0.25 ]]
[connection signal="pressed" from="VBox/HBox2/HalfButton" to="." method="fill_amount" binds= [ 0.5 ]]
[connection signal="pressed" from="VBox/HBox2/ThreeQtrButton" to="." method="fill_amount" binds= [ 0.75 ]]
[connection signal="pressed" from="VBox/HBox2/FullButton" to="." method="fill_amount" binds= [ 1.0 ]]
[connection signal="pressed" from="VBox/HBox3/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="VBox/HBox3/CancelButton" to="." method="_on_CancelButton_pressed"]
